use sdkman to eliminate sdk configs; misc setup updates